# blue42-old

./: .drone.dev.yml  .drone.qa.yml  .drone.yml  .gdbinit  .gitmodules  .lager.qa  CMakeLists.txt  Dockerfile  README.md  env_comp
_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
_build/app/: blue42  blue42.hex  cmake_install.cmake
_build/app/include/version/: cmake_install.cmake  version_blue42.h
_build/libraries/: cmake_install.cmake
_build/libraries/gpio/: cmake_install.cmake
_build/libraries/log/: cmake_install.cmake
_build/libraries/section_iter/: cmake_install.cmake
_build/libraries/system/: cmake_install.cmake
_build/libraries/uart/: cmake_install.cmake
_build/test/: cmake_install.cmake
_build/test/test_suite_1/: blue42_test1  blue42_test1.hex  cmake_install.cmake
app/: CMakeLists.txt
app/include/version/: CMakeLists.txt  version_blue42.h.in
app/src/: main.c
cmake/: arm-gcc-toolchain.cmake
libraries/: CMakeLists.txt
libraries/gpio/: CMakeLists.txt
libraries/log/: CMakeLists.txt
libraries/section_iter/: CMakeLists.txt
libraries/system/: #CMakeLists.txt#  CMakeLists.txt
libraries/system/include/: system_nrf52840.h
libraries/uart/: CMakeLists.txt
libraries/uart/include/: #uart_drv.h#  uart_drv.h
libraries/uart/src/: uart_drv.c
linker/: blue42.ld
modules/: CMakeLists.txt
modules/mpu9250_drv/: CMakeLists.txt
modules/mpu9250_drv/include/: #mpu9250_drv.h#  .#mpu9250_drv.h  mpu9250_drv.h
modules/mpu9250_drv/src/: mpu9250_drv.c
test/: CMakeLists.txt
test/test_suite_1/: #CMakeLists.txt#  .#CMakeLists.txt  .gdbinit  CMakeLists.txt
test/test_suite_1/include/: test1.h  unity_config.h
test/test_suite_1/src/: main_test1.c  test1.c  unity_config.c
test/test_suite_mpu9250_drv/: CMakeLists.txt
test/test_suite_mpu9250_drv/src/: main_test_mpu9250.c  test_mpu9250_drv.c
